# LyceanEM-Python

./: .gitattributes  .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  acceleration_structure.py  conf.py  development.yml  env.yaml  index.rst  new_requirements.txt  pyproject.toml  raycasting_accelerated.cuh  requirements.txt  setup.cfg  setup.py  try.py  versioneer.py
.github/: matrix.yaml
.github/workflows/: build-test.yml  build_wheels.yml  conda-test-build.yml  conda_build.yaml  conda_build.yml  draft-pdf.yml  manual_publish.yml  publish.yml  python-publish.yml
CUDA_source/: CMakeLists.txt
EM_workspace/source/: CMakeLists.txt  Untitled-2.py  frequency_domain_models.cu  math_utility.cuh  raycasting_accelerated.cuh
EM_workspace/testing/: em_test.cuh  maths_utility_tests.cu  unit_test.py
EM_workspace/testing/reference_files/: angular_dependent_frequency_domain_response.npy  rayhits.npy  scatter_map.npy  scatter_points.ply  transmit_horn.ply
actions/: upload.py
conda/: bld.bat  build.bat  build.sh  meta.yaml
docs/: try.py
docs/examples/: 01_aperture_projection.py  02_coherently_polarised_array.py  03_frequency_domain_channel_modelling.py  04_time_domain_channel_modelling.py  05_array_beamforming.py  06_farfield_polarisation.py  07_aperture_farfield_polarisation.py  08_beamforming_architecture.py  09_satellite_channel_modelling.py  DemoUAV.stl  DepthCamera_2023-03-22-08-38-43.json  README.rst  environment.npy  reference_reflectorplate.ply  scattering_points.npy  sinks.npy  sources.npy  starlink.txt
docs/source/: Tutorial.rst  accelerationstructures.rst  antenna_utilities.rst  base.rst  beamforming.rst  conf.py  contributing.rst  copyright.rst  design.rst  electromagnetics.rst  emfunctions.rst  empropagation.rst  environment.yml  frequencydomainmodels.rst  geometry.rst  geometryfunctions.rst  index.rst  installation.rst  lyceanemrefs.bib  models.rst  paper.bib  paper.md  raycasting.rst  requirements.txt  sg_execution_times.rst  sources.rst  targets.rst  timedomainmodels.rst  utility.rst
docs/source/_static/: lyceanemrefs.bib
docs/source/auto_examples/: 01_aperture_projection.codeobj.json  01_aperture_projection.ipynb  01_aperture_projection.py  01_aperture_projection.py.md5  01_aperture_projection.rst  01_aperture_projection_codeobj.pickle  02_coherently_polarised_array.codeobj.json  02_coherently_polarised_array.ipynb  02_coherently_polarised_array.py  02_coherently_polarised_array.py.md5  02_coherently_polarised_array.rst  02_coherently_polarised_array_codeobj.pickle  03_frequency_domain_channel_modelling.codeobj.json  03_frequency_domain_channel_modelling.ipynb  03_frequency_domain_channel_modelling.py  03_frequency_domain_channel_modelling.py.md5  03_frequency_domain_channel_modelling.rst  03_frequency_domain_channel_modelling_codeobj.pickle  04_time_domain_channel_modelling.codeobj.json  04_time_domain_channel_modelling.ipynb  04_time_domain_channel_modelling.py  04_time_domain_channel_modelling.py.md5  04_time_domain_channel_modelling.rst  04_time_domain_channel_modelling_codeobj.pickle  05_array_beamforming.codeobj.json  05_array_beamforming.ipynb  05_array_beamforming.py  05_array_beamforming.py.md5  05_array_beamforming.rst  05_array_beamforming_codeobj.pickle  06_farfield_polarisation.codeobj.json  06_farfield_polarisation.ipynb  06_farfield_polarisation.py  06_farfield_polarisation.py.md5  06_farfield_polarisation.rst  06_farfield_polarisation_codeobj.pickle  07_aperture_farfield_polarisation.codeobj.json  07_aperture_farfield_polarisation.ipynb  07_aperture_farfield_polarisation.py  07_aperture_farfield_polarisation.py.md5  (+20 more)
docs/source/auto_examples/images/: sphx_glr_01_aperture_projection_001.vtksz  sphx_glr_01_aperture_projection_002.vtksz  sphx_glr_01_aperture_projection_003.vtksz  sphx_glr_02_coherently_polarised_array_001.vtksz  sphx_glr_02_coherently_polarised_array_002.vtksz  sphx_glr_02_coherently_polarised_array_005.vtksz  sphx_glr_03_frequency_domain_channel_modelling_001.vtksz  (+6 more)
docs/source/examples/: 01_aperture_projection.py  02_coherently_polarised_array.py  05_array_beamforming.py  08_array_validation.py  DemoAperture.stl  DemoUAV.stl  README.rst
examples/: aperture_projection.py  farfield_analysis.py  satellite_track.py  swtdv3.py  swv2.py  temp.scad  temp.stl
lyceanem/: MANIFEST.in  __init__.py  _version.py  base.py  base_classes.py  base_types.py
lyceanem/CUDA_source/EM_workspace/source/test/: CMakeLists.txt  cuda_assert_example  test.cu
lyceanem/docs/: Tutorial.rst  antenna_utilities.rst  empropagation.rst  frequencydomainmodels.rst  installation.rst  raycasting.rst  timedomainmodels.rst
lyceanem/electromagnetics/: antenna_utilities.py  beamforming.py  emfunctions.py  empropagation.py  sources.py
lyceanem/electromagnetics/data/: Oxy.txt  Vapour.txt  propagation_constants.py
lyceanem/geometry/: geometryfunctions.py  parabolas.scad  targets.py
lyceanem/geometry/data/: NasaAlmondHalfWavelengthv2.stl  NasaAlmondQuarterWavelengthv2.stl  NasaAlmondTenthWavelengthv2.stl
lyceanem/models/: __init__.py  acceleration_structures.py  frequency_domain.py  models.py  time_domain.py
lyceanem/raycasting/: complex_casting.py  rayfunctions.py  rayfunctions_optix.py
lyceanem/src/: em.cuh  frequency_domain_models.cu  math_utility.cuh  raycasting.cuh  raycasting_accelerated.cuh  raycasting_brute_force.cuh  terrain_acceleration_build.cuh  types.cuh
lyceanem/tests/: reflectordata.py  test_base_classes.py  test_empropagation.py  test_geometryfunctions.py  test_ray_functions.py  test_targets.py  testscript.py
lyceanem/tests/data/: Demo UAV.step  UAV.stl  UAVarray.stl  areas.npy  centroid_mesh.ply  centroid_numpy.npy  cube.ply  prototypescanpoints24GHztenthwavelength.ply  receive_horn.ply  referencescanpoints24GHztenthwavelength.ply  rotated_recieve.ply  triangle_type_array_ref.npy
lyceanem/utility/: math_functions.py  mesh_functions.py
src/: beamforming.py  empropagation.py  models.py  rayfunctions.py  sources.py  targets.py  testscript.py  utility.py
trial/: trial.py
(+17 files in other folders)
