[build-system]
requires = ["scikit-build-core>=0.10","pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "lyceanem"          # keep your existing name
dynamic = ["version"]      # update from your setup.py
# ... add other metadata (description, license, etc.) if you want

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
install.strip = true

# Optional: tell CMake where to find your extension (if you use add_subdirectory or similar)
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]