
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = lyceanem/_version.py
versionfile_build = lyceanem/_version.py
tag_prefix =
parentdir_prefix = lyceanem-

[metadata]
license_file = LICENSE.txt