
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = lyceanem/_version.py
versionfile_build = lyceanem/_version.py
tag_prefix =
parentdir_prefix = lyceanem-

[metadata]
name = lyceanem
version = 0.0.3.1
author = Timothy Pelham
author_email = t.g.pelham@bristol.ac.uk
url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = LyceanEM is a Python library for modelling electromagnetic propagation for sensors and communications.
long_description = file: README.md
classifiers=
        Development Status :: 3 - Alpha
        Environment :: GPU :: NVIDIA CUDA
        Intended Audience :: Developers
        Intended Audience :: Education
        Intended Audience :: Other Audience
        Intended Audience :: Science/Research
        License :: OSI Approved :: GNU Affero General Public License v3
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Topic :: Education
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Mathematics
        Topic :: Scientific/Engineering :: Visualization
        Topic :: Scientific/Engineering :: Physics
        Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
        Topic :: Software Development :: Libraries :: Python Modules
        Topic :: Utilities
long_description_content_type = text/markdown
license_file = LICENSE.txt

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    open3d
    matplotlib
    numba
    solidpython
    scipy
zip_safe = True
include_package_data = True

