
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

# [versioneer]
# VCS = git
# style = pep440-pre
# versionfile_source = lyceanem/_version.py
# versionfile_build = lyceanem/_version.py
# tag_prefix =
# parentdir_prefix = lyceanem-


[metadata]
name = lyceanem
author = Timothy Pelham
author_email = t.g.pelham@bristol.ac.uk
url = https://lyceanem-python.readthedocs.io/en/latest/
description = LyceanEM is a Python library for modelling electromagnetic propagation for sensors and communications.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt



